infra/apps/sqld/overlays/internal/backend-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sqld-backend
spec:
  parentRefs:
    - name: sqld-gateway
      namespace: gateway
  hostnames:
    - internal.solsqld.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: sqld-backend
          port: 8000
